# coral

./: .gitignore  CHORAL_L1_IMPLEMENTATION.md  CHORAL_README.md  CLAUDE.md  Makefile.am  README.md  README.md.asc  configure.ac  coral-cli  coral-cli-simple  coral_cli_real.cpp  integrate-randomx.sh  libbitcoinconsensus.pc.in  seeds.txt  test_genesis  test_genesis.cpp
doc/man/: Makefile.am
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  chain.cpp  chain.h  chainparams.cpp  chainparams.cpp.randomx_backup  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compressor.cpp  compressor.h  (+129 more)
src/bench/: addrman.cpp  base58.cpp  bech32.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  block_assemble.cpp  ccoins_caching.cpp  chacha20.cpp  chacha_poly_aead.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  data.cpp  data.h  descriptors.cpp  duplicate_inputs.cpp  examples.cpp  gcs_filter.cpp  hashpadding.cpp  lockedpool.cpp  logging.cpp  mempool_eviction.cpp  mempool_stress.cpp  merkle_root.cpp  nanobench.cpp  peer_eviction.cpp  poly1305.cpp  prevector.cpp  rollingbloom.cpp  rpc_blockchain.cpp  rpc_mempool.cpp  strencodings.cpp  util_time.cpp  verify_script.cpp  wallet_balance.cpp  wallet_loading.cpp
src/choral/: choral_primitives.cpp  choral_primitives.h  coraldns.cpp  coraldns.h  subnet_interface.cpp  subnet_interface.h
src/common/: bloom.cpp  bloom.h
src/compat/: assumptions.h  byteswap.h  compat.h  cpuid.h  endian.h  stdin.cpp  stdin.h
src/config/: coral-config.h
src/consensus/: amount.h  consensus.h  merkle.cpp  merkle.h  params.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  chacha_poly_aead.cpp  chacha_poly_aead.h  common.h  hkdf_sha256_32.cpp  hkdf_sha256_32.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  muhash.cpp  muhash.h  poly1305.cpp  poly1305.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_arm_shani.cpp  sha256_avx2.cpp  sha256_sse4.cpp  sha256_sse41.cpp  sha256_x86_shani.cpp  sha3.cpp  sha3.h  sha512.cpp  sha512.h  siphash.cpp  siphash.h
src/identity/: identitymanager.cpp  identitymanager.h  useridentity.cpp  useridentity.h
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  coinstatsindex.cpp  coinstatsindex.h  disktxpos.h  txindex.cpp  txindex.h
src/init/: bitcoin-node.cpp  bitcoin-qt.cpp  common.cpp  common.h  coral-gui.cpp  coral-wallet.cpp  corald.cpp
src/interfaces/: chain.h  echo.cpp  echo.h  handler.cpp  handler.h  init.cpp  init.h  ipc.h  node.h  wallet.h
src/ipc/: context.h  exception.h  interfaces.cpp  process.cpp  process.h  protocol.h
src/kernel/: bitcoinkernel.cpp  chain.cpp  chain.h  chainstatemanager_opts.h  checks.cpp  checks.h  coinstats.cpp  coinstats.h  context.cpp  context.h  mempool_limits.h  mempool_options.h  mempool_persist.cpp  mempool_persist.h  validation_cache_sizes.h
src/logging/: timer.h
src/marketplace/: escrow.cpp  escrow.h  listing.cpp  listing.h  listingstore.cpp  listingstore.h  marketplacetypes.h  order.cpp  order.h  orderstore.cpp  orderstore.h
src/node/: blockstorage.cpp  blockstorage.h  caches.cpp  caches.h  chainstate.cpp  chainstate.h  coin.cpp  coin.h  connection_types.cpp  connection_types.h  context.cpp  context.h  eviction.cpp  eviction.h  interface_ui.cpp  interface_ui.h  interfaces.cpp  mempool_args.cpp  mempool_args.h  mempool_persist_args.cpp  mempool_persist_args.h  miner.cpp  miner.h  minisketchwrapper.cpp  minisketchwrapper.h  psbt.cpp  psbt.h  transaction.cpp  transaction.h  utxo_snapshot.h  validation_cache_args.cpp  validation_cache_args.h
src/poker/: mentalpoker.cpp  mentalpoker.h  poker.cpp  poker.h  pokercards.cpp  pokercards.h  pokerescrow.cpp  pokerescrow.h  pokernet.cpp  pokernet.h  pokertypes.h
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  fees_args.h  packages.cpp  packages.h  policy.cpp  policy.h  rbf.cpp  rbf.h  settings.cpp  settings.h
src/primitives/: block.cpp  block.cpp.original  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.h  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  chatpage.cpp  chatpage.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  coral.h  coraladdressvalidator.h  coralamountfield.h  coralgui.h  coralunits.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  (+103 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  external_signer.cpp  fees.cpp  mempool.cpp  mempool.h  mining.cpp  mining.h  net.cpp  node.cpp  output_script.cpp  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  register.h  request.cpp  request.h  server.cpp  server.h  server_util.cpp  server_util.h  signmessage.cpp  txoutproof.cpp  util.cpp  util.h
src/script/: bitcoinconsensus.cpp  coralconsensus.h  descriptor.cpp  descriptor.h  interpreter.cpp  interpreter.h  keyorigin.h  miniscript.cpp  miniscript.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  signingprovider.cpp  signingprovider.h  standard.cpp  standard.h
src/secp256k1/: configure.ac  libsecp256k1.pc.in
(+753 files in other folders)
