dist_man1_MANS=

if BUILD_CORALD
  dist_man1_MANS+=corald.1
endif

if ENABLE_QT
  dist_man1_MANS+=coral-qt.1
endif

if BUILD_CORAL_CLI
  dist_man1_MANS+=coral-cli.1
endif

if BUILD_CORAL_TX
  dist_man1_MANS+=coral-tx.1
endif

if BUILD_CORAL_UTIL
  dist_man1_MANS+=coral-util.1
endif

if ENABLE_WALLET
if BUILD_CORAL_WALLET
  dist_man1_MANS+=coral-wallet.1
endif
endif
